2025-07-24  Saruman the White  <eker@eker10>

	* process.cc (SyntacticPreModule::processSubsorts): don't require
	sorts in subsort declarations to be declared

	* syntacticPreModule.hh (class SyntacticPreModule): updated decl
	for getSort()

	* process.cc (SyntacticPreModule::getSort): use line number from
	token rather than FileTable::SYSTEM_CREATED in the case of an
	undeclared sort; have option to allow undeclared sorts

===================================Maude164===========================================

2025-07-11  Rubén Rubio <rubenrub@ucm.es>

	* makeGrammar.cc (MixfixModule::makeSpecialProductions):
	initialize variable to avoid reading garbage

2025-06-26  Rubén Rubio <rubenrub@ucm.es>

	* view.cc (handleStratAwkwardCase): removed call to
	addStratMappingVarIndices

2025-06-18  Saruman the White  <eker@eker10>

	* ooProcess.cc (SyntacticPreModule::processClassSorts): use
	Token::isValidSortName(); use markAsBad() so module can't be
	imported at the metalevel

	* process.cc (SyntacticPreModule::processSorts): use
	Token::isValidSortName(); use markAsBad() so module can't be
	imported at the metalevel
	(SyntacticPreModule::getSort): symmetric changes

	* token.hh (isValidSortName): added

	* process.cc (SyntacticPreModule::getSort): check for bad sort
	names for sorts that get added as a fix up
	(SyntacticPreModule::process): update comments now that multiple
	calls can markAsBad

	* ooProcess.cc (SyntacticPreModule::processClassSorts): check that
	class name is also a valid sort name

	* process.cc (SyntacticPreModule::processSorts): check that new
	sort if a valid sort name

2025-06-17  Saruman the White  <eker@eker10>

	* token.cc (Token::split): don't consider : . inside correctly
	nested {}s as split point

	* makeGrammar.cc (MixfixModule::makeParameterizedSortProductions):
	added explanation of why nonterminals for lead tokens of
	structured sorts are needed
	(MixfixModule::makeComponentProductions): removed commented out
	code
